--- a/reppo/templates/_commit_diff_summary.html
+++ b/reppo/templates/_commit_diff_summary.html
@@ -1,9 +1,9 @@
 <div class="commit-diff-summary">
     {#<div class="commit-diff-summary">#}
     <div>
-        Showing {{ summary.files }} changed files with
-        <strong>{{ summary.additions }} additions</strong>
+        Showing {{ changes.files }} changed files with
+        <strong>{{ changes.additions }} additions</strong>
         and
-        <strong>{{ summary.deletions }} deletions</strong>.
+        <strong>{{ changes.deletions }} deletions</strong>.
     </div>
 </div>
