--- a/reppo/templates/refs.html
+++ b/reppo/templates/refs.html
@@ -2,17 +2,17 @@
 
 {% block content %}
 <div class="refs">
-{% for ref in refs %}
+{% for r in refs %}
     {% if loop.first %}
     <div class="ref default-ref">
         Default:
-        <a href="{{ url_for('.tree', ref=ref) }}">{{ ref }}</a>
+        <a href="{{ url_for('.tree', ref=r) }}">{{ r }}</a>
     </div>
 
     <hr>
     {% else %}
     <div class="ref">
-        <a href="{{ url_for('.tree', ref=ref) }}">{{ ref }}</a>
+        <a href="{{ url_for('.tree', ref=r) }}">{{ r }}</a>
     </div>
     {% endif %}
 {% endfor %}
