--- a/reppo/static/css/reppo.css
+++ b/reppo/static/css/reppo.css
@@ -62,7 +62,6 @@ footer {
     border: 1px solid #ddd;
     border-radius: 3px;
     font-size: 14px;
-    margin-bottom: 20px;
     padding: 0 60px;
     text-align: center;
 }
@@ -165,6 +164,7 @@ footer {
 /* breadcrumb */
 
 .breadcrumb {
+    color: #999;
     float: left;
     font-size: 18px;
     line-height: 32px;
@@ -181,6 +181,10 @@ footer {
 
 .breadcrumb a {
     display: inline-block;
+}
+
+.breadcrumb strong {
+    color: #000;
 }
 
 /* history */
@@ -835,6 +839,7 @@ color: #d3d3d3;
 }
 
 .file .meta .info {
+    color: #333;
     float: left;
     height: 33px;
     line-height: 34px;
