--- a/reppo/templates/base.html
+++ b/reppo/templates/base.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/select2.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/reppo.css') }}">
+    {% block stylesheets %}{% endblock stylesheets %}
 </head>
 <body>
 
